I updated the environment.yml file based on #6
Comment 5 asked to change the name of the project. It changed from 'LUcompute' to 'Project_Omar'.
Comments number 6 and 7 have to do with simplifying the 'environment.yml' file. Several unused packages were removed.

--- a/environment.yml
+++ b/environment.yml
@@ -1,22 +1,11 @@
-name: LUcompute
+name: Project_Omar
 channels:
   - conda-forge
 dependencies:
   - python=3
-  - matplotlib
-  - bokeh
-  - ipywidgets
   - notebook
   - numpy
-  - openpyxl
   - pandas
-  - pip
-  - scipy
+  - matplotlib
   - seaborn
   - pip
-  - xlrd
-  - lxml
-  - cryptography
-  - simplegeneric
-  - cython
-  - geopandas
